--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Ciao!
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+<style type="text/css">
+    html, body {
+        margin:0;
+        padding: 0;
+    }
+    div {background: rgb(0,0,0);
+background: repeating-linear-gradient(to left, #f6e823 0px, #f6e823 40px, black 40px, black 80px);
+height: 20px;
+width: 100%}
+</style>
+</head>
+<body>
+<div></div>
+<img src="wip.jpg" style="min-width: 50%; max-width: 80%; display: block; margin: 30vh auto 0 auto">
+</body>
+</html>
