--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="it-IT">
 <head>
-    <title>Altrove</title>
-        <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <meta charset="utf-8" />
+    <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <meta name="theme-color" content="#f6e823" />
+    <!-- <link rel="manifest" href="manifest.json" /> -->
+    <link rel="shortcut icon" type="image/png" href="assets/icon.png" />
+    <meta name="og:title" content="Working for Altrove" />
+    <meta name="description" content="Il progetto per il teatro Altrove di Genova si fonda su quattro termini chiave, che ne costituiscono i punti cardinali: etica, positività, innovazione e connessioni." />
+    <meta name="og:description" content="Il progetto per il teatro Altrove di Genova si fonda su quattro termini chiave, che ne costituiscono i punti cardinali: etica, positività, innovazione e connessioni." />
+    <meta name="og:type" content="website" />
+    <meta name="og:site_name" content="Working for Altrove" />
+    <meta name="og:url" content="https://altrovegenova.com" />
+    <meta name="og:image" content="assets/meta.png" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.11.1/tachyons.min.css" integrity="sha256-XiJ+PedljEmPP2VaQzSzekfCZdPr0fpqmh9dY6kpsuQ=" crossorigin="anonymous" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:image:src" content="meta.png"/> -->
+    <title>Altrove</title>
+
+    <link rel="stylesheet" href="assets/tachyons.min.css" />
 <style type="text/css">
 html, body {
     margin:0;
@@ -170,7 +185,7 @@ article {
     A cavallo fra il 2019 e il 2020, l’Associazione Mercanti di Idee vince il bando per la gestione del Teatro Altrove, centro culturale storico del quartiere della Maddalena a Genova. 
   </p>
   <p class="lh-copy">
-    Il progetto Altrove si fonda su quattro termini chiave, che ne costituiscono i punti cardinali: etica, positività, innovazione e connessioni. L’obbiettivo del progetto è quello di trasformare l’Altrove in un punto di riferimento per il quartiere della Maddalena, proponendo una realtà inclusiva e ispirante per studenti, giovani, famiglie, cittadini. Per fare questo, l’attività si strutturerà su più livelli, organizzando eventi che variano dalla divulgazione scientifica al food, dalle iniziative sociali alle espressioni artistiche.
+    Il progetto Altrove si fonda su quattro termini chiave, che ne costituiscono i punti cardinali: etica, positività, innovazione e connessioni. L’obiettivo del progetto è quello di trasformare l’Altrove in un punto di riferimento per il quartiere della Maddalena, proponendo una realtà inclusiva e ispirante per studenti, giovani, famiglie, cittadini. Per fare questo, l’attività si strutturerà su più livelli, organizzando eventi che variano dalla divulgazione scientifica al food, dalle iniziative sociali alle espressioni artistiche.
   </p>
 </article>
 
@@ -219,7 +234,7 @@ article {
   <p class="lh-copy">
     <strong>L’Associazione Mercanti di Idee</strong> è una realtà senza scopo di lucro che nasce nel 2015 con l’obiettivo di portare a Genova un evento in stile TED (Technology, Entertainment & Design), il format di conferenze divulgative più conosciuto al mondo. Nel 2019 <strong>TEDxGenova</strong> vince il bando del Comune di Genova – “Genova dei Festival”. In 4 anni di attività l’Associazione riesce a raccogliere fondi e partnership importanti. Il totale è di più di 80 partner (locali e nazionali) coinvolti nei 9 eventi organizzati.</p>
       <p class="lh-copy">
-    Il TEAM è attualmente composto completamente da volontari, professionisti nel loro ambito di competenza. Parteciperanno al progetto per l’Altrove:<br><br>
+    Il team è attualmente composto completamente da volontari, professionisti nel loro ambito di competenza. Parteciperanno al progetto per l’Altrove:<br><br>
     <strong>Davide Pignone – presidente dell’Associazione</strong><br>
     Project management e curatela.<br><br>
     <strong>Ludovica Pellizzetti</strong><br>
@@ -236,7 +251,7 @@ article {
 
 </main>
 
-<footer class="pv4 ph5 mid-gray w-100 bg-black">
+<footer class="pv4 ph5 mid-gray w-100 bg-black tc tl-ns">
   <small class="f6 db white mv3">© 2020 Mercanti di Idee</small>  
 </footer>
 
