--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="og:type" content="website" />
     <meta name="og:site_name" content="Working for Altrove" />
     <meta name="og:url" content="https://altrovegenova.com" />
-    <meta name="og:image" content="assets/meta.png" />
+    <meta name="og:image" content="https://altrovegenova.com/assets/meta.png" />
 
     <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="" />
