--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ article {
 
 </main>
 
-<footer class="pv4 ph5 mid-gray w-100 bg-black tc tl-ns">
+<footer class="pv4 ph3 ph5-ns mid-gray w-100 bg-black tl">
   <small class="f6 db white mv3">© 2020 Mercanti di Idee</small>  
 </footer>
 
