--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="" />
     <meta name="twitter:image:src" content="meta.png"/> -->
-    <title>Altrove</title>
+    <title>Working for Altrove</title>
 
     <link rel="stylesheet" href="assets/tachyons.min.css" />
 <style type="text/css">
@@ -236,11 +236,11 @@ article {
       <p class="lh-copy">
     Il team è attualmente composto completamente da volontari, professionisti nel loro ambito di competenza. Parteciperanno al progetto per l’Altrove:<br><br>
     <strong>Davide Pignone – presidente dell’Associazione</strong><br>
-    Project management & Curation<br><br>
+    Project Management & Curation<br><br>
     <strong>Ludovica Pellizzetti</strong><br>
     Operations & Human Resources<br><br>
     <strong>Annapaola Vacanti</strong><br>
-    Art direction & Branding<br><br>
+    Art Direction & Branding<br><br>
     <strong>Daniele Bonanzinga</strong><br>
     Communication & Content Creation<br><br>
     <strong>Luca Bobbio</strong><br>
@@ -252,8 +252,8 @@ article {
 </main>
 
 <footer class="pv4 ph3 ph5-ns mid-gray w-100 bg-black tl">
-  <small class="db white mv3 lh-copy" style="font-size: .8rem">© 2020 Associazione Mercanti di Idee, Viale Bernabò Brea 63A, 16131 Genova - C.F. 95183280106<br>
-    <a href="https://www.facebook.com/altrovegenova/" class="no-underline white">Facebook</a> - <script>emailE = "mercantidiidee"+ "@"+"g"+"m"+"ail.com";document.write('<a class="white no-underline" href="mailto:' + emailE + '">' + 'Mail' + '</a>')</script>
+  <small class="db white mv3 lh-copy" style="font-size: .8rem">© 2020 Associazione Mercanti di Idee<br>
+    <a href="https://www.facebook.com/altrovegenova/" class="no-underline white">Facebook</a> &middot; <script>emailE = "mercantidiidee"+ "@"+"g"+"m"+"ail.com";document.write('<a class="white no-underline" href="mailto:' + emailE + '">' + 'Mail' + '</a>')</script>
 </small>
 </footer>
 
