--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ article {
 <header class="ph3 ph5-ns mt5">
 <h1><img src="assets/logo.svg" alt="Working for Altrove" style="width: 220px"></h1>
 </header>
-<main class="mw9">
+<main class="w-100">
 <article class="ph3 ph5-ns">
   <h2>Il progetto</h2>
   <p class="lh-copy">
