--- a/index.html
+++ b/index.html
@@ -242,9 +242,7 @@ article {
     <strong>Annapaola Vacanti</strong><br>
     Art Direction & Branding<br><br>
     <strong>Daniele Bonanzinga</strong><br>
-    Communication & Content Creation<br><br>
-    <strong>Luca Bobbio</strong><br>
-    Digital Production Management
+    Communication & Content Creation<br>
   </p>
 </article>
 </div>
