--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ article {
 
 <footer class="pv4 ph3 ph5-ns mid-gray w-100 bg-black tl">
   <small class="db white mv3 lh-copy" style="font-size: .8rem">© 2020 Associazione Mercanti di Idee<br>
-    <a href="https://www.facebook.com/altrovegenova/" class="no-underline white">Facebook</a> &middot; <script>emailE = "mercantidiidee"+ "@"+"g"+"m"+"ail.com";document.write('<a class="white no-underline" href="mailto:' + emailE + '">' + 'Mail' + '</a>')</script>
+    <a href="https://www.instagram.com/workingforaltrove/" class="no-underline white">Instagram</a> &middot; <a href="https://www.facebook.com/altrovegenova/" class="no-underline white">Facebook</a> &middot; <script>emailE = "mercantidiidee"+ "@"+"g"+"m"+"ail.com";document.write('<a class="white no-underline" href="mailto:' + emailE + '">' + 'Mail' + '</a>')</script>
 </small>
 </footer>
 
