--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@ article {
     Art Direction & Branding<br><br>
     <strong>Daniele Bonanzinga</strong><br>
     Communication & Content Creation<br>
+    <strong>Luca Bobbio</strong><br>
+    Digital Generalist<br>
   </p>
 </article>
 </div>
