--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ article {
     <strong>L’Associazione Mercanti di Idee</strong> è una realtà senza scopo di lucro che nasce nel 2015 con l’obiettivo di portare a Genova un evento in stile TED (Technology, Entertainment & Design), il format di conferenze divulgative più conosciuto al mondo. Nel 2019 <strong>TEDxGenova</strong> vince il bando del Comune di Genova – “Genova dei Festival”. In 4 anni di attività l’Associazione riesce a raccogliere fondi e partnership importanti. Il totale è di più di 80 partner (locali e nazionali) coinvolti nei 9 eventi organizzati.</p>
       <p class="lh-copy">
     Il team è attualmente composto completamente da volontari, professionisti nel loro ambito di competenza. Parteciperanno al progetto per l’Altrove:<br><br>
-    <strong>Davide Pignone – presidente dell’Associazione</strong><br>
+    <strong>Davide Pignone</strong><br>
     Project Management & Curation<br><br>
     <strong>Ludovica Pellizzetti</strong><br>
     Operations & Human Resources<br><br>
