--- a/call-for-ideas.html
+++ b/call-for-ideas.html
@@ -92,9 +92,10 @@ article {
 
 <script type="text/javascript">
 ScrollReveal().reveal('article', {
-    delay: 175,
+    delay: 150,
     duration: 700,
-    interval: 200
+    interval: 100,
+    distance: '20px',
 });
 </script>
 <script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
