--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 ScrollReveal().reveal('article', {
     delay: 175,
     duration: 700,
-    interval: 200
+    interval: 200,
+    distance: '20px',
 });
 </script>
 <script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
