--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <body class="">
 <div id="topbar"></div>
 <header class="ph3 ph5-ns mt5 tc">
-<h1><a href="./index.html"><img src="assets/logo.svg" alt="Working for Altrove" style="width: 220px"></a></h1>
+<h1><a href="/"><img src="assets/logo.svg" alt="Working for Altrove" style="width: 220px"></a></h1>
 <nav class="pv3 pv4-ns">
-  <a class="link dim gray f6 f5-ns dib" href="index.html" title="Home">Home</a> &middot;
+  <a class="link dim gray f6 f5-ns dib" href="/" title="Home">Home</a> &middot;
   <a class="link dim black b f6 f5-ns dib" href="call-for-ideas.html" title="Home">Call for Ideas</a>
 </nav>
 
