--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <strong>Davide Pignone</strong><br>
     Gestione del progetto e curatela<br><br>
     <strong>Fernanda Leitão</strong><br>
-    Amministrazione<br><br>
+    Segreteria Amministrativa<br><br>
     <strong>Ludovica Pellizzetti</strong><br>
      Gestione del personale e pubbliche relazioni<br><br>
     <strong>Annapaola Vacanti</strong><br>
