--- a/call-for-ideas.html
+++ b/call-for-ideas.html
@@ -41,7 +41,7 @@
 
 <article class="ph3 pa5-ns pv1 pv1-ns" style="background: #f6e823">
   <p class="lh-copy f4 tj">
-    Vuoi esibirti sul palco eclettico dell'Altrove, proporre una mostra o stupire tutti con la tua cucina nel bistrò? Leggi i nostri valori e partecipa alla call for ideas per collaborare con noi!
+    Vuoi esibirti sul palco eclettico dell'Altrove, proporre una mostra o stupire tutti con la tua cucina nel bistrot? Leggi i nostri valori e partecipa alla call for ideas per collaborare con noi!
   </p>
 </article>
 <article class="ph3 ph5-ns db">
