--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <strong>Daniele Bonanzinga</strong><br>
     Comunicazione<br><br>
     <strong>Matteo Altamura</strong><br>
-    Supporto amministrativo<br><br>
+    Gestione operativa<br><br>
     <strong>Luca Bobbio</strong><br>
     Supporto tecnico e digitale<br>
   </p>
