--- a/call-for-ideas.html
+++ b/call-for-ideas.html
@@ -39,11 +39,11 @@
 
 <main class="mw8-ns mw-100-m center">
 
-<article class="ph3 pa5-ns pv1 pv1-ns" style="background: #f6e823">
+<a href="#call-links" class="no-underline db black ph3 pa5-ns pv1 pv1-ns" style="background: #f6e823">
   <p class="lh-copy f4 tj">
     Vuoi esibirti sul palco eclettico dell'Altrove, proporre una mostra o stupire tutti con la tua cucina nel bistrot? Leggi i nostri valori e partecipa alla call for ideas per collaborare con noi!
   </p>
-</article>
+</a>
 <article class="ph3 ph5-ns db">
   <h2>I nostri valori</h2>
   <p class="lh-copy">
@@ -60,7 +60,7 @@
   </p>
 </article>
 
-<article class="ph3 ph5-ns mw8">
+<article class="ph3 ph5-ns mw8" id="call-links">
     <h2 class="f3 f2-m f1-l">Partecipa al progetto</h2>
     <div class="cf">
         <div class='square-box'>
