--- a/call-for-ideas.html
+++ b/call-for-ideas.html
@@ -39,8 +39,8 @@
 
 <main class="mw8-ns mw-100-m center">
 
-<a href="#call-links" class="no-underline db black ph3 pa5-ns pv1 pv1-ns" style="background: #f6e823">
-  <p class="lh-copy f4 tj">
+<a href="#call-links" class="no-underline db black ph3 pa5-ns pv1 pv1-ns mv2" style="background: #f6e823">
+  <p class="lh-copy f4" style="text-align: left;">
     Vuoi esibirti sul palco eclettico dell'Altrove, proporre una mostra o stupire tutti con la tua cucina nel bistrot? Leggi i nostri valori e partecipa alla call for ideas per collaborare con noi!
   </p>
 </a>
