--- a/call-for-ideas.html
+++ b/call-for-ideas.html
@@ -64,11 +64,11 @@
     <h2 class="f3 f2-m f1-l">Partecipa al progetto</h2>
     <div class="cf">
         <div class='square-box'>
-            <a href="#" class='square-content'><div><span>Eventi Stage</span></div></a>
+            <a href="https://mercantidiidee.typeform.com/to/XXXxO4" class='square-content'><div><span>Eventi Stage</span></div></a>
         </div>
 
         <div class='square-box'>
-            <a href="#" class='square-content'><div><span>Eventi Food</span></div></a>
+            <a href="https://mercantidiidee.typeform.com/to/NO4kIo" class='square-content'><div><span>Eventi Food</span></div></a>
         </div>
     </div>
 
