--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
 </head>
-<body class="">
+<body>
 <div id="topbar"></div>
 <header class="ph3 ph5-ns mt5 tc">
 <h1><a href="/"><img src="assets/logo.svg" alt="Working for Altrove" style="width: 220px"></a></h1>
@@ -60,6 +60,19 @@
 
 
 </div>
+<article class="ph3 ph5-ns mw8" id="call-links">
+    <h2 class="f3 f2-m f1-l">Partecipa al progetto</h2>
+    <div class="cf">
+        <div class='square-box'>
+            <a href="https://mercantidiidee.typeform.com/to/XXXxO4" class='square-content'><div><span>Eventi Stage</span></div></a>
+        </div>
+
+        <div class='square-box'>
+            <a href="https://mercantidiidee.typeform.com/to/NO4kIo" class='square-content'><div><span>Eventi Food</span></div></a>
+        </div>
+    </div>
+</article>
+
 </main>
 <main class="mw-100 center">
 
@@ -85,6 +98,8 @@
     Gestione operativa<br><br>
   </p>
 </article>
+
+
 </div>
 
 </main>
@@ -104,5 +119,15 @@ ScrollReveal().reveal('article', {
 });
 </script>
 <script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-88440122-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-88440122-3');
+</script>
+
 </body>
 </html>
