--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <main class="mw8-ns mw-100-m center">
 <article class="ph3 ph5-ns">
-	<button class="collapsible"><h2>Il progetto [+]</h2></button>
+  <button class="collapsible"><h2>Il progetto</h2></button>
   <div class="content"><p class="lh-copy">
     A cavallo fra il 2019 e il 2020, l’Associazione Mercanti di Idee vince il bando per la gestione del Teatro Altrove, centro culturale storico del quartiere della Maddalena a Genova. 
   </p>
@@ -48,13 +48,13 @@
 </article>
 
 <article class="ph3 ph5-ns">
-  <button class="collapsible"><h2 class="f3 f2-m f1-l">La vision [+]</h2></button>
-  <div class="content"><p class="lh-copy">
+  <h2 class="f3 f2-m f1-l">La vision</h2>
+  <p class="lh-copy">
     Il fine ultimo del progetto è quello di dimostrare che <strong>esiste un altro modo</strong>: un altro modo di pensare, un altro modo di mangiare, un altro modo di stare in società. <strong>Esiste un altro mo(n)do, e la soglia dell’Altrove sarà un portale per accedervi.</strong>
   </p>
   <p class="lh-copy">
     La vision dell’Associazione, con il progetto Altrove, è quello di dare vita a un ambiente vivibile, creativo e inclusivo, grazie anche alla Call for Ideas aperta a tutte le associazioni e i privati che vogliono collaborare.
-  </p></div>
+  </p>
 
 </article>
 
