Tolto il bUttone

--- a/call-for-ideas.html
+++ b/call-for-ideas.html
@@ -81,7 +81,7 @@
 
 <footer class="pv4 ph3 ph5-ns mid-gray w-100 bg-black tc">
   <small class="white mv3 lh-copy" style="">© 2020 Associazione Mercanti di Idee<br>
-    <a href="https://www.instagram.com/workingforaltrove/" class="no-underline white">Instagram</a> &middot; <a href="https://www.facebook.com/altrovegenova/" class="no-underline white">Facebook</a> &middot; <script>emailE = "mercantidiidee"+ "@"+"g"+"m"+"ail.com";document.write('<a class="white no-underline" href="mailto:' + emailE + '">' + 'Mail' + '</a>')</script>
+    <a href="https://instagram.com/workingforaltrove/" class="no-underline white">Instagram</a> &middot; <a href="https://www.facebook.com/altrovegenova/" class="no-underline white">Facebook</a> &middot; <script>emailE = "mercantidiidee"+ "@"+"g"+"m"+"ail.com";document.write('<a class="white no-underline" href="mailto:' + emailE + '">' + 'Mail' + '</a>')</script>
 </small>
 </footer>
 <style type="text/css">
