--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <main class="mw8-ns mw-100-m center">
 <article class="ph3 ph5-ns">
-  <button class="collapsible"><h2>Il progetto</h2></button>
+  <h2 class="f3 f2-m f1-l">Il progetto</h2>
   <div class="content"><p class="lh-copy">
     A cavallo fra il 2019 e il 2020, l’Associazione Mercanti di Idee vince il bando per la gestione del Teatro Altrove, centro culturale storico del quartiere della Maddalena a Genova. 
   </p>
@@ -109,7 +109,7 @@
 
 <footer class="pv4 ph3 ph5-ns mid-gray w-100 bg-black tc">
   <small class="white mv3 lh-copy" style="">© 2020 Associazione Mercanti di Idee<br>
-    <a href="https://www.instagram.com/workingforaltrove/" class="no-underline white">Instagram</a> &middot; <a href="https://www.facebook.com/altrovegenova/" class="no-underline white">Facebook</a> &middot; <script>emailE = "mercantidiidee"+ "@"+"g"+"m"+"ail.com";document.write('<a class="white no-underline" href="mailto:' + emailE + '">' + 'Mail' + '</a>')</script>
+    <a href="https://instagram.com/workingforaltrove/" class="no-underline white">Instagram</a> &middot; <a href="https://www.facebook.com/altrovegenova/" class="no-underline white">Facebook</a> &middot; <script>emailE = "mercantidiidee"+ "@"+"g"+"m"+"ail.com";document.write('<a class="white no-underline" href="mailto:' + emailE + '">' + 'Mail' + '</a>')</script>
 </small>
 </footer>
 
