--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta name="theme-color" content="#f6e823" />
-    <!-- <link rel="manifest" href="manifest.json" /> -->
     <link rel="shortcut icon" type="image/png" href="assets/icon.png" />
     <meta name="og:title" content="Working for Altrove" />
     <meta name="description" content="Il progetto per il teatro Altrove di Genova si fonda su quattro termini chiave, che ne costituiscono i punti cardinali: etica, positività, innovazione e connessioni." />
@@ -15,51 +14,43 @@
     <meta name="og:url" content="https://altrovegenova.com" />
     <meta name="og:image" content="https://altrovegenova.com/assets/meta.png" />
 
-    <!-- <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="" />
-    <meta name="twitter:image:src" content="meta.png"/> -->
     <title>Working for Altrove</title>
-
+    
     <link rel="stylesheet" href="assets/tachyons.min.css" />
     <link rel="stylesheet" href="assets/style.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
-
+    <style type="text/css">
+      .lh-copy {text-align: justify}
+    </style>
 </head>
 <body>
 <div id="topbar"></div>
 <header class="ph3 ph5-ns mt5 tc">
 <h1><a href="/"><img src="assets/logo.svg" alt="Working for Altrove" style="width: 220px"></a></h1>
-<nav class="pv3 pv4-ns">
-  <a class="link dim gray f6 f5-ns dib" href="/" title="Home">Home</a> &middot;
-  <a class="link dim black b f6 f5-ns dib" href="call-for-ideas.html" title="Home">Call for Ideas</a>
-</nav>
-
 </header>
 
 <main class="mw8-ns mw-100-m center">
 <article class="ph3 ph5-ns">
-  <h2 class="f3 f2-m f1-l">Il progetto</h2>
-  <div class="content"><p class="lh-copy">
-    A cavallo fra il 2019 e il 2020, l’Associazione Mercanti di Idee vince il bando per la gestione del Teatro Altrove, centro culturale storico del quartiere della Maddalena a Genova. 
+  <div class="content">
+    <p class="lh-copy">
+   Scriviamo queste parole per comunicarvi una notizia che ci addolora molto; senza troppi giri di parole, ci troviamo costretti a fare un passo indietro e a rinunciare alla gestione dello spazio Altrove, rimettendo il teatro nelle mani del Comune.</p>
+
+<p class="lh-copy">Prendere questa decisione è stato difficilissimo per ognuno di noi ma, purtroppo, una serie di fattori suggerisce chiaramente che questa sia la scelta migliore, in primis per il bene dello stesso Altrove.</p>
+
+<p class="lh-copy">Lo scoppio della pandemia prima e il periodo di incertezza dopo hanno messo profondamente in crisi il progetto con cui ci siamo presentati al bando pubblico nel 2019, poiché hanno messo in discussione le stime necessarie per rendere sostenibile l'iniziativa. La riduzione drastica dei posti nel teatro e nel bistrot sono solo alcuni esempi di ostacoli che, insieme allo slittamento obbligato dei tempi, hanno e avrebbero messo a dura prova l'associazione. Non ultimo, il malfunzionamento e la rottura dell’impianto idraulico del teatro, avvenuto durante un intervento del Comune qualche giorno fa, ha aggravato la situazione, rendendo definitivamente insostenibile la nostra opera.</p>
+
+<p class="lh-copy">Date queste premesse, insistere con la nostra visione sarebbe stato estremamente difficile, e abbiamo quindi reputato più giusto e trasparente rimettere il destino del teatro nelle mani della città. Ritirarci è il modo migliore per rimanere fedeli al nostro progetto e non tradire la fiducia di chi ha creduto in noi.</p>
+
+<p class="lh-copy">Tuttavia, la nostra presenza non è stata vana: l'Altrove ha navigato al sicuro in queste acque tempestose e grazie ai lavori svolti con la nostra squadra è tornato ordinato e pulito. Abbiamo infatti tirato a lucido l'intero spazio, liberandolo dei rifiuti (e donando al quartiere gli oggetti utili), pulendolo da cima a fondo, imbiancandolo, stuccandolo, lavando i tendaggi e presidiando i lavori comunali sull'impianto elettrico e anti-incendio.</p>
+
+<p class="lh-copy">Il pensiero va adesso alle numerosissime realtà e ai formidabili volontari con cui siamo entrati in contatto nel corso dei mesi, e alle promesse fatte. Purtroppo la nostra gratitudine nei vostri confronti non potrà prendere forma all'interno dell'Altrove, ma si tradurrà senza dubbio in altri modi all'interno di ulteriori progetti di Mercanti di Idee.</p>
+
+<p class="lh-copy">Non sappiamo cosa deciderà adesso il Comune per la gestione dello spazio e per la sua manutenzione , ma siamo fiduciosi nel futuro e siamo sicuri che l'Altrove tornerà presto a splendere in tutta la sua bellezza. Perché se lo merita.</p>
+
+<p class="lh-copy">Grazie per averci sostenuti. Ci vediamo presto.</p>
   </p>
-  <p class="lh-copy">
-    Il progetto Altrove si fonda su quattro termini chiave, che ne costituiscono i punti cardinali: etica, positività, innovazione e connessioni. L’obiettivo del progetto è quello di trasformare l’Altrove in un punto di riferimento per il quartiere della Maddalena, proponendo una realtà inclusiva e ispirante per studenti, giovani, famiglie, cittadini. Per fare questo, l’attività si strutturerà su più livelli, organizzando eventi che variano dalla divulgazione scientifica al food, dalle iniziative sociali alle espressioni artistiche.
-  </p></div>
-</article>
-
-<article class="ph3 ph5-ns">
-  <h2 class="f3 f2-m f1-l">La vision</h2>
-  <p class="lh-copy">
-    Il fine ultimo del progetto è quello di dimostrare che <strong>esiste un altro modo</strong>: un altro modo di pensare, un altro modo di mangiare, un altro modo di stare in società. <strong>Esiste un altro mo(n)do, e la soglia dell’Altrove sarà un portale per accedervi.</strong>
-  </p>
-  <p class="lh-copy">
-    La vision dell’Associazione, con il progetto Altrove, è quello di dare vita a un ambiente vivibile, creativo e inclusivo, grazie anche alla Call for Ideas aperta a tutte le associazioni e i privati che vogliono collaborare.
-  </p>
-
-</article>
 
 
-</div>
   <!-- 
 <article class="ph3 ph5-ns mw8" id="call-links">
     <h2 class="f3 f2-m f1-l">Partecipa al progetto</h2>
@@ -77,38 +68,10 @@
 		-->
 
 </main>
-<main class="mw-100 center">
 
-<div class="team pb3 cf" style="background: #f6e823">
-<article class="ph3 ph5-ns mw8-ns mw-100-m center">
-  <h2 class="f3 f2-m f1-l mt5">Il team</h2>
-  <p class="lh-copy">
-
-    L’Associazione Mercanti di Idee è una realtà senza scopo di lucro che nasce nel 2015 con l’obiettivo di portare a Genova un evento in stile TED (Technology, Entertainment & Design), il format di conferenze divulgative più conosciuto al mondo. Nel 2019 <strong>TEDxGenova</strong> vince il bando del Comune di Genova – “Genova dei Festival”. In 4 anni di attività l’Associazione riesce a raccogliere fondi e partnership importanti. Il totale è di <strong>più di 80 partner (locali e nazionali) coinvolti</strong> nei 9 eventi organizzati.</p>
-      <p class="lh-copy">
-    Il team è attualmente composto completamente da volontari, professionisti nel loro ambito di competenza. Parteciperanno al progetto per l’Altrove:<br><br>
-    <strong>Davide Pignone</strong><br>
-    Gestione del progetto e curatela<br><br>
-    <strong>Fernanda Leitão</strong><br>
-    Segreteria Amministrativa<br><br>
-    <strong>Ludovica Pellizzetti</strong><br>
-     Gestione del personale e pubbliche relazioni<br><br>
-    <strong>Annapaola Vacanti</strong><br>
-    Grafica e arte<br><br>
-    <strong>Daniele Bonanzinga</strong><br>
-    Comunicazione<br><br>
-    <strong>Matteo Altamura</strong><br>
-    Gestione operativa<br><br>
-  </p>
-</article>
-
-
-</div>
-
-</main>
 
 <footer class="pv4 ph3 ph5-ns mid-gray w-100 bg-black tc">
-  <small class="white mv3 lh-copy" style="">© 2020 Associazione Mercanti di Idee<br>
+  <small class="white mv3 lh-copy" style="">© Associazione Mercanti di Idee<br>
     <a href="https://instagram.com/workingforaltrove/" class="no-underline white">Instagram</a> &middot; <a href="https://www.facebook.com/altrovegenova/" class="no-underline white">Facebook</a> &middot; <script>emailE = "mercantidiidee"+ "@"+"g"+"m"+"ail.com";document.write('<a class="white no-underline" href="mailto:' + emailE + '">' + 'Mail' + '</a>')</script>
 </small>
 </footer>
